# qtgraph

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  qtgraph.cpp  qtgraph.hpp
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
scripts/: build.sh  run.sh  setup.sh
source/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
